--- a/style.css
+++ b/style.css
@@ -217,8 +217,9 @@ body {
 #project .carousel .card img {
   flex: 0 0 45%;           /* sekitar 45% lebar card */
   max-width: none;        /* lebar maksimal */
-  height: 500px;            /* tinggi menyesuaikan */
+  height: AUTO;            /* tinggi menyesuaikan */
   object-fit: cover;
+  aspect-ratio: 4/3;
   border-radius: 12px;
   border: 3px solid #6b8fcf;
   transition: 0.3s ease;
